<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raspimouse_ros2_examples</name>
  <version>1.0.0</version>
  <description>Raspberry Pi Mouse examples</description>
  <maintainer email="s.aoki@rt-net.jp">ShotaAk</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>joy_linux</depend>
  <depend>libopencv-dev</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>raspimouse</depend>
  <depend>raspimouse_msgs</depend>
  <depend>rt_usb_9axisimu_driver</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>v4l-utils</depend>
  <depend>hls_lfcd_lds_driver</depend>
  <depend>nav2_map_server</depend>
  <depend>slam_toolbox</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
